# Prompit

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  index.html  model-capabilities.json  package-lock.json  package.json  provider-presets.disabled.json  provider-presets.json  release-please-config.json  vite.config.ts
.github/workflows/: release-please.yml  release.yml
docs/: SKILL.md  Tauri 跨平台打字翻译器架构设计文档 (MVP 阶段).md  builtin-prompts-guide.md
docs/guides/: builtin-prompts-guide.md  capability-icons-toggle.md
docs/superpowers/plans/: 2026-05-27-tauri-translator-mvp.md  2026-06-06-onboarding-plan.md  2026-06-08-dictionary-improvements.md  2026-06-08-startup-reminder.md  2026-06-09-empty-state-ghost-buttons.md  2026-06-09-history.md  2026-06-12-dictionary-persona.md  2026-06-12-sparkle-mode.md  2026-06-13-provider-icons.md
docs/superpowers/specs/: 2026-06-06-onboarding-design.md  2026-06-08-dictionary-improvements-design.md  2026-06-08-startup-reminder-design.md  2026-06-09-empty-state-ghost-buttons-design.md  2026-06-09-history-design.md  2026-06-12-dictionary-persona-design.md  2026-06-12-sparkle-mode-design.md  2026-06-13-provider-icons-design.md
scripts/: generate-third-party-licenses.mjs  sync-tauri-config.mjs  validate-i18n.mjs
src/: i18n.ts  main.ts  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.key.pub
src-tauri/capabilities/: default.json
src-tauri/data/: model-capabilities.json  provider-presets.json
src-tauri/icons/: icon.icns
src-tauri/src/: aifw.rs  config.rs  crypto.rs  kek.rs  lib.rs  main.rs  power_watcher.rs  shortcut.rs  state.rs  vault.rs
src-tauri/src/commands/: clipboard.rs  config_cmd.rs  dictionary.rs  history.rs  http_proxy.rs  mod.rs  persona.rs  presets.rs  providers.rs  secrets.rs  skills_lite.rs  sparkle.rs  webdav.rs  websearch.rs  window.rs
src/components/: DataCategorySelector.vue  EditableCardList.vue  LicenseText.vue  ModelCapabilityIcon.vue  TranslateToolbar.vue
src/components/icons/: AudioUp.vue  VideoUp.vue
src/components/icons/providers/: Agnes.vue  AntLing.vue  Anthropic.vue  AnySearch.vue  Baidu.vue  Bailian.vue  Brave.vue  DeepSeek.vue  Exa.vue  Firecrawl.vue  Gemini.vue  Grok.vue  Kimi.vue  LMStudio.vue  LongCat.vue  MIMO.vue  Meta.vue  Minimax.vue  Ollama.vue  OpenAI.vue  OpenCode.vue  OpenRouter.vue  ProviderIcon.vue  Qwen.vue  QwenAI.vue  README.md  SenseNova.vue  SiliconFlow.vue  Step.vue  StreamLake.vue  Tavily.vue  TencentCloud.vue  Volcengine.vue  Zhipu.vue  iFLYTEKCloud.vue  iFLYTEKMaaS.vue  index.ts  xAI.vue
src/composables/: useAnimatedResize.ts  useDataCategories.ts  useDataImport.ts  useDropdown.ts  useGlass.ts  useModeModelSelector.ts  useSettingsWindow.ts  useShortcutRecorder.ts  useTauriEvents.ts  useTheme.ts  useUpdateChecker.ts  useWindowBg.ts
src/constants/: languages.ts
src/data/: special-thanks.json
src/locales/: en.json  zh-CN.json
src/router/: index.ts
src/services/: errors.ts  llm-client.ts  model-capabilities.ts  proxy.ts
src/services/websearch/: anysearch.ts  brave.ts  exa.ts  firecrawl.ts  index.ts  registry.ts  tavily.ts  types.ts
src/shared/: dropdown.ts  main-window.json  ui.css
src/stores/: config.ts
src/utils/: burstParticles.ts  platform.ts  shortcut.ts
src/views/: About.vue  DictionaryEditor.vue  ExportData.vue  FloatingInput.vue  HistoryPanel.vue  ImportData.vue  License.vue  Onboarding.vue  ResetSoftware.vue  Settings.vue  Shortcuts.vue  StartupReminder.vue  ThirdPartyLicenses.vue  UserData.vue  WebdavSync.vue
