[package]
name = "prompit"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "prompit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2"
enigo = { version = "0.2", features = ["serde"] }
arboard = "3"
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
argon2 = "0.5"
zeroize = { version = "1", features = ["zeroize_derive"] }
dotenvy = "0.15"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
csv = "1"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
# Win32 SetWindowPos for atomic resize+reposition (single call sets pos+size,
# avoiding the one-frame gap between Tauri's separate set_position/set_size).
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(target_os = "macos")'.dependencies]
# NSWindow setFrame:display: sets origin+size atomically in one message.
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSView", "NSGraphics"] }

