[package]
name = "prompit"
version = "0.1.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "prompit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2"
enigo = { version = "0.2", features = ["serde"] }
arboard = "3"
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
argon2 = "0.5"
zeroize = { version = "1", features = ["zeroize_derive"] }
dotenvy = "0.15"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
csv = "1"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
# URL parsing for http_proxy scheme validation (VULN-4 SSRF mitigation). Already
# in the dep tree via reqwest; declared explicitly so we can `use url::Url`.
url = "2"
# WebDAV PROPFIND multistatus parsing (remote backup file listing). XML is only
# ever parsed here, and only the <href> local names are extracted.
quick-xml = "0.36"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
# Win32 SetWindowPos for atomic resize+reposition (single call sets pos+size,
# avoiding the one-frame gap between Tauri's separate set_position/set_size).
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    # Power APIs (RegisterPowerSettingNotification / POWERBROADCAST_SETTING)
    # for Modern-Standby lid-close detection.
    "Win32_System_Power",
    # GUID_CONSOLE_DISPLAY_STATE lives in SystemServices.
    "Win32_System_SystemServices",
] }
# Direct WebView2 controller access (ICoreWebView2Controller::SetBounds) for the
# resize pre-warm: pre-sizing the webview before the OS window snaps. Versions
# match what wry already pulls in (see Cargo.lock).
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_Foundation"] }
# OS credential store (Windows Credential Manager / DPAPI) for the local vault
# KEK. See kek.rs. v3 ships no default features, so the platform backend must
# be enabled explicitly.
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
# NSWindow setFrame:display: sets origin+size atomically in one message.
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSView", "NSGraphics"] }
# Raw window handle access for the atomic resize on macOS (window.rs reads the
# NSView via AppKit). Already in the dep tree via tauri; declared explicitly so
# `use raw_window_handle::...` resolves. Version pinned to match the tree.
raw-window-handle = "0.6"
# OS credential store (Keychain) for the local vault KEK. See kek.rs.
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
# OS credential store (Secret Service via D-Bus) for the local vault KEK.
# Requires GNOME Keyring / KWallet at runtime; kek.rs falls back to the
# machine-seed KEK when no daemon is reachable. crypto-rust avoids pulling in
# OpenSSL for the Secret Service session encryption.
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

